# 333

./: .gitignore  App.tsx  package-lock.json
.github/workflows/: build.yml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: gg-mem-arm64  traffic_hook.js
android/app/src/main/java/com/fridactl/: DownloadService.kt  FloatingMemoryScanService.kt  HttpProxyServer.kt  MainActivity.kt  MainApplication.kt  RootBridgeModule.kt  TrafficModule.kt  TrafficPackage.kt  TrafficVpnService.kt
android/app/src/main/jni/: CMakeLists.txt  capture.c  capture.h  gg-mem.c
android/app/src/main/python/: frida_runner.py
src/native/: RootBridge.ts
src/screens/: AppsScreen.tsx  CommunityScreen.tsx  GameScreen.tsx  HackGamesScreen.tsx  HomeScreen.tsx  ScriptScreen.tsx  TrafficScreen.tsx
